--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.3",
     "express": "4.21.2",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "primevue": "^4.3.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "lit": "^3.2.1",
     "pinia": "^3.0.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
