--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.3",
+    "axios": "^1.9.0",
     "express": "4.21.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "primevue": "^4.3.3",
     "vue": "^3.5.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
